testdata/fixtures/audit/negative/client_only_validation_neg_bare_function_js.js
// bare identifier call (not a member expression) — a custom function that
// happens to share the name, must not fire
function checkValidity(values) {
  return values.email.includes("@");
}

const ok = checkValidity({ email: "a@b.com" });
